# openapi.json
@@ -1045,7 +1045,7 @@
           },
           "project_id": {
             "examples": [
-              "proofline"
+              "workline"
             ],
             "type": "string"
           },
@@ -1453,7 +1453,7 @@
     }
   },
   "info": {
-    "title": "Proofline API",
+    "title": "Workline API",
     "version": "0.1.1"
   },
   "openapi": "3.1.0",
